--- a/HTML/Formatting_Tags/index.html
+++ b/HTML/Formatting_Tags/index.html
@@ -44,10 +44,11 @@
     <!-- PRE TAG
     PRE TAG IS USED FOR DISPLAY THE RETURN CONTENT AS IT IS. -->
     <P>
-        Lorem ipsum dolor sit amet.
+        <PRE> Lorem ipsum dolor sit amet.
                 Lorem, ipsum dolor sit amet consectetur adipisicing.
                     Lorem ipsum dolor sit.
                 LORE
+            </PRE>
     </P>
 </body>
 </html>
